# dicto-desktop

./: .eslintrc.cjs  .gitignore  CROSS_PLATFORM.md  INSTALL_LINUX.md  Makefile  QUICK_START.md  README.md  RELEASING.md  TODO.md  components.json  config.yaml.example  dev-app-update.yml  electron-builder.yml  electron.vite.config.1737930295432.mjs  electron.vite.config.1740565177602.mjs  electron.vite.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.node.json
.claude/: settings.local.json
.ctx/docs/: core_architecture.md  project_overview.md  services.md  testing_strategy.md  ui.md
.github/workflows/: build.yml  release.yml
.mdm/: .gitignore  registry.json
.mdm/docs/: core_architecture.md  project_overview.md  services.md  testing_strategy.md  ui.md
.mdm/guides/: how_agents_should_behave.md  how_mdm_works.md  how_to_manage_docs.md  how_to_sync_docs.md  the_middleman.md
.mdm/templates/: doc_template.md  project_overview_template.md
__docs__/: _doc_template.md  fix_all.md  project_overview.md
docs/: api_contracts.md
scripts/: bump-version.js  commit-version.js
src/: controller.py  main.py
src/config/: settings.py
src/i18n/: __init__.py  translations.py
src/main/: index.js  index.ts
src/main/modules/: ai.js  ipc.js  shortcuts.js  sound.js  store.js  tray.js
src/main/modules.ts/: api-calls-v1.ts  auto-updater.ts  clipboard-and-keys.ts  default-profiles.ts  electron-store.ts  logger.ts  popup-window.ts  resize.ts  shortcuts.ts  tray.ts
src/preload/: index-popup.ts  index.d.ts  index.js  index.ts  popup-preload.ts
src/renderer/: index-popup.html  index.html
src/renderer/src/: App.tsx  App.vue  AppPopup.tsx  env.d.ts  main-popup.tsx  main.tsx
src/renderer/src/components/: AudioDeviceSelector.tsx  AudioRecorder.vue  CompactMode.tsx  DeleteProfileDialog.tsx  Header.vue  HomePanel.vue  HomeSection.tsx  LanguageDropdown.tsx  OutputDeviceSelector.tsx  PopupWindow.tsx  ProfileForm.tsx  ProfileForm.vue  ProfilePanel.vue  ProfilesSection.tsx  RecordingButton.vue  RecordingStatus.vue  SettingsPanel.vue  SettingsSection.tsx  ShortcutEditor.vue  ShortcutInfo.vue  Sidebar.tsx  Tooltip.tsx  TranscriptionBox.vue  UpdateNotification.tsx
src/renderer/src/components/ui/: Dialog.tsx  Select.tsx  Sidebar.tsx  Slider.tsx  Tabs.tsx  UpdateButton.tsx
src/renderer/src/composables/: languages.js  useAI.js  useAIProcess.js  useAudioRecorder.js  usePlaySound.js  useProfiles.js  useSelectedProfile.js  useShortcutEditor.js
src/renderer/src/hooks/: useRecord.ts  useSound.ts  useStore.ts
src/renderer/src/lib/: ipc-renderer.ts  languages.ts  models.ts  profile-template.ts
src/renderer/src/types/: electron.d.ts  popup-api.d.ts  types.ts
src/services/: clipboard.py  hotkey.py  hotkey_wayland.py  keyboard_actions.py  recorder.py  transcriber.py
src/ui/: icons.py  main_window.py  main_window_styles.py  overlay.py  splash.py  tray.py  waveform.py
src/utils/: __init__.py  icons.py  logger.py
tests/: conftest.py
tests/api/: test_api_contracts.py
tests/integration/: test_cancel_flow.py  test_edit_flow.py  test_recording_flow.py  test_settings_sync.py
tests/ui/: test_main_window.py  test_overlay.py  test_report_panel.py  test_waveform.py
tests/unit/: test_clipboard.py  test_controller.py  test_hotkey.py  test_i18n.py  test_log_buffer.py  test_platform.py  test_recorder.py  test_settings.py  test_transcriber.py
